--- a/styles/main.css
+++ b/styles/main.css
@@ -105,6 +105,11 @@ body {
   font-family: var(--wordFont);
 }
 
+main {
+  width: 100%;
+  height: 100%;
+}
+
 app {
   display: flex;
   flex-direction: column;
