--- a/styles/main.css
+++ b/styles/main.css
@@ -1360,7 +1360,11 @@ wrapper:first-of-type controls {
 }
 
 wrapper:first-of-type controls button.small {
+    backdrop-filter: blur(4px);
   transition: none;
+      border: 1px solid hsla(var(--appBackgroundHSL), 1);
+      background-image: linear-gradient(180deg, rgba(255, 255, 255, .015), rgba(255, 255, 255, .015) 40%, rgba(255, 255, 255, 0) 40%), linear-gradient(180deg, rgba(255, 255, 255, .015), rgba(255, 255, 255, 0));
+      background-color: hsla(var(--appBackgroundDarkHSL), 0.5);
   padding: calc(0.5 * var(--defaultGap)) calc(1 * var(--defaultGap));
   height: unset;
   font-size: 90%;
