--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,7 @@ html {
   height: 100%;
   min-height: 100%;
   overflow: hidden;
+  touch-action: manipulation;
 }
 
 body {
@@ -99,6 +100,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  touch-action: manipulation;
   color: hsl(var(--appForegroundHSL));
   font-size: 1.3em;
   line-height: 1.3em;
