--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2784,6 +2784,13 @@ hue.selected {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .mobile parking {
+    transform-origin: 50% 50%;
+    scale: .85;
+  }
+}
+
 @media screen and (max-width: 678px) {
   :root {
     --tiniestIconSize: 11px;
