--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -368,7 +368,16 @@ header span:first-of-type {
   justify-content: end;
 }
 
-button.dailycta {
+update {
+  display: flex;
+  justify-content: center;
+  width: calc(100%);
+  height: 0px;
+  overflow: visible;
+}
+
+button.dailycta,
+button.updatecta {
   position: fixed;
   top: 0px;
   transform: translate(0px, -60px);
@@ -383,12 +392,31 @@ button.dailycta {
   font-family: 'Abel', 'Segoe UI', 'Helvetica Neue';
 }
 
-button.dailycta icon {
+button.dailycta icon,
+button.updatecta icon {
   background: hsl(var(--appBackgroundHSL));
 }
 
-button.dailycta.show {
+button.dailycta.show,
+button.updatecta.show {
   transform: translate(0px, var(--defaultGap));
+}
+
+button.updatecta {
+  z-index: 400;
+  border-color: hsl(var(--appBackgroundHSL));
+  border-radius: 25px;
+  background-color: hsl(var(--appBackgroundDarkestHSL));
+  padding: 10px 30px;
+  color: hsl(var(--messageColorHSL));
+}
+
+/* button.updatecta.show {
+  transform: translate(0px, calc((-1 * var(--defaultGap)) - env(safe-area-inset-bottom)));
+  opacity: 1;
+} */
+button.dailycta icon {
+  background: hsl(var(--appBackgroundHSL));
 }
 
 header h1 {
